k8s/networks/testnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-core-testnet-graph
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - secretName: cloudflare-tls
      hosts:
        - graph.testnet.persistence.one
  rules:
    - host: graph.testnet.persistence.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: persistencecore-graph-node
                port:
                  number: 8000
  ingressClassName: nginx
